--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
-    <string name="app_name">StrangersInSpace</string>
+    <string name="app_name">Strangers in Space👽🤖💂</string>
     <string name="action_settings">Settings</string>
+    <string name="enter_code">Enter Code</string>
+    <string name="party">Party</string>
 </resources>
