--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <string name="action_settings">Settings</string>
     <string name="enter_code">Enter Code</string>
     <string name="party">Party</string>
+    <string name="title_activity_party_gestures">PartyGesturesActivity</string>
+    <string name="Rock">ROCK</string>
+    <string name="HipHop">HIP-HOP</string>
+    <string name="Funk">FUNK</string>
+    <string name="Rave">RAVE</string>
 </resources>
