--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">Strangers in Space👽🤖💂</string>
     <string name="action_settings">Settings</string>
-    <string name="enter_code">Enter Code</string>
-    <string name="party">Party</string>
+    <string name="enter_code">5429T</string>
+    <string name="party">Party!</string>
     <string name="title_activity_party_gestures">PartyGesturesActivity</string>
     <string name="Rock">ROCK</string>
     <string name="HipHop">HIP-HOP</string>
