add all things (??)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="action_settings">Settings</string>
     <string name="enter_code">5429T</string>
     <string name="party">Party!</string>
-    <string name="title_activity_party_gestures">PartyGesturesActivity</string>
+    <string name="title_activity_party_gestures">Dance!</string>
     <string name="Rock">ROCK</string>
     <string name="HipHop">HIP-HOP</string>
     <string name="Funk">FUNK</string>
